@@ -1,3 +1,9 @@
+2011-07-06  Nick Alcock  <nick.alcock@oracle.com>
+
+	* makefile (COMPILE.cpp): Rename to...
+	(COMPILE.preprocess): ... this.
+	* libdtrace/makefile: Adjust accordingly.
+
 2011-06-29  Nick Alcock  <nick.alcock@oracle.com>
 
 	* libdtrace/dt_proc.c (dt_proc_control): Improve comments.
